--- a/TeamOrionSensorTests/TeamOrionSensorTests.ioc
+++ b/TeamOrionSensorTests/TeamOrionSensorTests.ioc
@@ -70,36 +70,39 @@ Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
 Mcu.IP0=DMA
 Mcu.IP1=I2C1
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=USART1
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP2=I2C2
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI1
+Mcu.IP6=SYS
+Mcu.IP7=USART1
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA11
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=PB3
-Mcu.Pin16=PB4
-Mcu.Pin17=PB6
-Mcu.Pin18=PB7
-Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin10=PB15
+Mcu.Pin11=PA8
+Mcu.Pin12=PA9
+Mcu.Pin13=PA10
+Mcu.Pin14=PA11
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=PB3
+Mcu.Pin18=PB4
+Mcu.Pin19=PB6
 Mcu.Pin2=PA2
+Mcu.Pin20=PB7
+Mcu.Pin21=VP_SYS_VS_Systick
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
 Mcu.Pin6=PA6
 Mcu.Pin7=PA7
-Mcu.Pin8=PB15
-Mcu.Pin9=PA8
-Mcu.PinsNb=20
+Mcu.Pin8=PB10
+Mcu.Pin9=PB11
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -167,6 +170,10 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=USART1_TX_LORA_RX
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB10.Mode=I2C
+PB10.Signal=I2C2_SCL
+PB11.Mode=I2C
+PB11.Signal=I2C2_SDA
 PB15.GPIOParameters=GPIO_Label
 PB15.GPIO_Label=LORA_M1
 PB15.Locked=true
@@ -215,7 +222,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
